k8s/tardis/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tardis
  labels:
    app.kubernetes.io/part-of: tardis
    purpose: vessel-console
