k8s/tardis/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: tardis
  labels:
    app: gitea
    app.kubernetes.io/part-of: tardis
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
